@@ -1,3 +1,8 @@
+gphoto2 2.5.7.1 snapshot
+
+* --keep-raw option added, which leaves non-JPEG files on camera during
+  capture or wait-event-and-download
+
 gphoto2 2.5.6.1 snapshot
 
 * updated translations: french, ukrainian, vietnamese, russian, polish, dutch
